logs/run_20250309_143433.log
[2025-03-09 14:34:33] AI Code Bot started working on project: Automation Tools
[2025-03-09 14:34:33] Found 0 existing Python files in project.
[2025-03-09 14:34:33] Generating AI-driven tasks...
[2025-03-09 14:34:37] Generated 4 executable tasks.
[2025-03-09 14:34:37] Created script: C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_1_20250309_143437.py
[2025-03-09 14:34:37] Error executing script C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_1_20250309_143437.py:
  File "C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_1_20250309_143437.py", line 1
    Task 1:
         ^
SyntaxError: invalid syntax

[2025-03-09 14:34:37] Created script: C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_2_20250309_143437.py
[2025-03-09 14:34:37] Error executing script C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_2_20250309_143437.py:
  File "C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_2_20250309_143437.py", line 22
    ```
    ^
SyntaxError: invalid syntax

[2025-03-09 14:34:37] Created script: C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_3_20250309_143437.py
[2025-03-09 14:34:37] Error executing script C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_3_20250309_143437.py:
  File "C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_3_20250309_143437.py", line 19
    ```
    ^
SyntaxError: invalid syntax

[2025-03-09 14:34:37] Created script: C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_4_20250309_143437.py
[2025-03-09 14:34:37] Error executing script C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_4_20250309_143437.py:
Traceback (most recent call last):
  File "C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_4_20250309_143437.py", line 20, in <module>
    merge_csv_files(input_files, 'merged_data.csv')
  File "C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_4_20250309_143437.py", line 9, in merge_csv_files
    with open(file, 'r') as f:
FileNotFoundError: [Errno 2] No such file or directory: 'data1.csv'

[2025-03-09 14:34:37] AI Code Bot execution completed successfully.
